Clamp flag has no effect on result value in Math and MixRGB shader nodes (Blender Render) #42445

Closed
opened 2014-10-30 10:34:26 +01:00 by Alexander Romanov · 6 comments

System Information
Ubuntu GeForce GTX 780

Blender Version
Broken: 2.72

Short description of error
Clamp flag has no effect on result value in Math and MixRGB shader nodes (Blender Render)

Exact steps for others to reproduce the error
.blend file attached. Toggle of clamp flag in Add node must have effect on output value. MixRGB node has the same bug.
issue4-clamp.blend

**System Information** Ubuntu GeForce GTX 780 **Blender Version** Broken: 2.72 **Short description of error** Clamp flag has no effect on result value in Math and MixRGB shader nodes (Blender Render) **Exact steps for others to reproduce the error** .blend file attached. Toggle of clamp flag in Add node must have effect on output value. MixRGB node has the same bug. [issue4-clamp.blend](https://archive.blender.org/developer/F120316/issue4-clamp.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Alexander Romanov self-assigned this 2014-10-30 10:34:26 +01:00
Author
Member

Added subscriber: @AlexanderRomanov

Added subscriber: @AlexanderRomanov
Alexander Romanov was unassigned by Bastien Montagne 2014-10-30 13:16:56 +01:00

This issue was referenced by 176f0102ea

This issue was referenced by 176f0102eaacc9f9caa5de24326137a8c3fa0f89

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 176f0102ea.

Closed by commit 176f0102ea.

Added subscriber: @yurikovelenov

Added subscriber: @yurikovelenov
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42445
No description provided.