Fix T42445: Clamp flag has no effect on result value in Math and MixRGB shader nodes (Blender Render)

Quite striaghtforward implementation, with the only weird thing that for some reason
my video driver wasn't happy with calling the function "clamp" giving some weirdo
shader compilation error messages.

Called the GPU function clamp_val which can handle float and vec3.